--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -19,3 +19,99 @@
 .ag-theme-quartz .ag-cell {
     border-right: 1px solid #ccc;
 }
+
+.content {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    width: 80vw
+}
+
+.dialog-content {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.first-modal {
+    z-index: 1000
+}
+
+.second-modal {
+    z-index: 1001
+}
+
+.second-modal .content {
+    width: 40vw
+}
+
+.error-message, .label-error {
+    color: red;
+}
+
+.error-message {
+    font-size: 15px
+}
+
+input.error, textarea.error {
+    border-color: red;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    overflow-x: hidden;
+    overflow-y: auto;
+    max-height: 70vh;
+}
+
+.form input[type=text], .form input[type=password], .form textarea {
+    min-height: 40px;
+    min-width: 20vw;
+    max-height: 200px;
+    max-width: 20vw;
+}
+
+.form input[type=date], .form input[type=time] {
+    max-width: 20vw;
+}
+
+.form input, .form textarea {
+    font-size: 16px;
+    height: 40px;
+    padding: 0 10px;
+    border: 1px solid #ebebeb;
+    box-shadow: 2px 8px 15px rgba(201, 201, 201, 0.1);
+    border-radius: 10px;
+}
+
+.form div {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start
+}
+
+.form label {
+    color: #a2a2a2;
+    margin-top: 10px
+}
+
+.form-button {
+    color: #FFFFFF;
+    font-size: 1.25em;
+    padding: 10px;
+    cursor: pointer;
+    margin: 20px 0 0;
+    border: 1px;
+}
+
+.button {
+    background: #353f57;
+    border-radius: 7px;
+}
