--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -50,15 +50,15 @@
     width: 40vw
 }
 
-.error-message, .label-error {
+.form .error-message, .form .label-error {
     color: red;
 }
 
-.error-message {
+.form .error-message {
     font-size: 15px
 }
 
-input.error, textarea.error {
+.form input.error, .form textarea.error {
     border-color: red;
 }
 
